--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,7 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: Mademoiselle de Maupin, Volume 2 (of 2)
 url: http://www.gutenberg.org/ebooks/48894
